fix: don't resize the input field on focus to prevent the "Add" button jump

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,10 +115,6 @@
 
 #add-variant input {
     padding: 4px;
-    width: 100px;
-}
-
-#add-variant input:focus {
     width: 250px;
 }
 
